# django-app-template

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.prod.yaml  compose.yaml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  instantiation.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
config/: asgi.py  settings.py  test_settings.py  urls.py  views.py  wsgi.py
example/: admin.py  factories.py  models.py  urls.py  views.py
example/migrations/: 0001_initial.py
example/templates/example/: _item_count.html  item_list.html
example/tests/: test_models.py  test_views.py
scripts/: instantiate.py
specs/001-template-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-template-scaffold/checklists/: requirements.md
specs/001-template-scaffold/contracts/: health-endpoint.md  instantiate-cli.md  justfile-recipes.md
static/css/: input.css  tailwind.css
templates/: base.html
tests/: test_health.py  test_instantiation.py
